@@ -1,3 +1,7 @@
+2021-09-24  Matteo Corti  <corti@precise>
+
+	* test/unit_tests.sh (oneTimeSetup): defining TMPDIR if not defined
+
 2021-09-24 Bernd Stroessenreuther <booboo@gluga.de>
 
 	* test/unit_tests.sh: adding a test for checking a local CRL file
